<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Fragment1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_to_the_second_lab_app"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="39dp"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/enter_a_string"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="34dp"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/sizeList"
        android:layout_marginEnd="34dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:layout_marginTop="43dp"
        android:text="@string/OK"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</android.support.constraint.ConstraintLayout>
